compiler/fir/analysis-tests/testData/metadataDiagnostic/externalClassInheritsExpect.kt
// METADATA_TARGET_PLATFORMS: JS, WasmJs

expect interface Base

internal external class <!EXTERNAL_TYPE_EXTENDS_NON_EXTERNAL_TYPE, EXTERNAL_TYPE_EXTENDS_NON_EXTERNAL_TYPE!>Derived<!> : Base
